debugging fork banner

--- a/_includes/fork_banner.html
+++ b/_includes/fork_banner.html
@@ -13,3 +13,7 @@
    </div>
 <!-- End: Fork - Getting Started Message (fork_banner.html) -->
 {% endif %}
+<pre>
+    site.url: {{ site.url }}
+
+</pre>
